# LLM-Wiki-Knowledge-Base

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: development.md  graphrag-pivot.md  rag_evaluation.md  start-guide.md  wikigraph_lightrag.md
docs/architecture/: README.md  high-level.md  low-level.md  mid-level.md
docs/proposal/: Capstone_Project_Status_2026-04-15.md  Capstone_Proposal_Draft.md
eval/: benchmark.yaml  benchmark_synthesis.yaml
eval/legacy-fts/: README.md  realm_vs_rag_find.json
eval/results/: README.md  answer_metrics.csv  backend_answer_metrics_docs_answers.csv  backend_answer_metrics_real_pdf_answers.csv  backend_answer_metrics_real_pdf_answers_v2.csv  backend_retrieval_metrics_baseline_v2.csv  backend_retrieval_metrics_baseline_wgr_text_units.csv  backend_retrieval_metrics_docs_retrieval.csv  backend_retrieval_metrics_improved_v5.csv  backend_retrieval_metrics_improved_v6.csv  backend_retrieval_metrics_improved_wgr_additive.csv  backend_retrieval_metrics_improved_wgr_graphrag_artifact.csv  backend_retrieval_metrics_improved_wgr_text_units.csv  backend_retrieval_metrics_improved_wgr_v2.csv  backend_retrieval_metrics_improved_wgr_v3.csv  backend_retrieval_metrics_improved_wgr_v4.csv  backend_retrieval_metrics_improved_wgr_weighted.csv  backend_retrieval_metrics_real_pdf_answers.csv  backend_retrieval_metrics_real_pdf_answers_v2.csv  backend_summary_baseline_v2.md  backend_summary_baseline_wgr_text_units.md  backend_summary_docs_answers.md  backend_summary_docs_retrieval.md  backend_summary_improved_v5.md  backend_summary_improved_v6.md  backend_summary_improved_wgr_additive.md  backend_summary_improved_wgr_graphrag_artifact.md  backend_summary_improved_wgr_text_units.md  backend_summary_improved_wgr_v2.md  backend_summary_improved_wgr_v3.md  backend_summary_improved_wgr_v4.md  backend_summary_improved_wgr_weighted.md  backend_summary_real_pdf_answers.md  backend_summary_real_pdf_answers_v2.md  command_surface_e2e.md  openai_three_engine_mixed_benchmark_20260610.yaml  per_pdf_review.md  per_question_review.md  retrieval_metrics.csv  summary.md  (+1 more)
graph/graphrag/: settings.yaml
kb/: .gitignore  pyproject.toml
kb/commands/: __init__.py  compile.py  export_vault.py  lint.py  query.py  status.py
kb/engine/: command_registry.py  tool_registry.py
kb/kb/: cli.py
kb/models/: __init__.py  command_models.py  source_models.py  tool_models.py  wiki_models.py
kb/providers/: __init__.py  base.py
kb/services/: __init__.py  compile_service.py  config_service.py  export_service.py  ingest_service.py  lint_service.py  manifest_service.py  query_service.py  search_service.py
kb/tests/: test_cli.py  test_compile_and_lint.py  test_search_query_export_status.py
kb/tools/: __init__.py
scripts/: backend_evaluation_lib.py  evaluate_answers.py  evaluate_backends.py  evaluate_graph_modes.py  evaluate_rag.py  evaluate_retrieval.py  evaluation_lib.py  fetch_eval_corpus.py  graphrag_artifact_retriever.py  render_eval_reviews.py  run_real_corpus_smoke.py
scripts/rag_eval/: __init__.py  _compat.py  aggregate.py  backends.py  cli.py  dataset.py  generation_metrics.py  judge.py  ragas_metrics.py  retrieval_metrics.py  types.py
src/: cli.py
src/commands/: add.py  ask.py  common.py  compile.py  config_cmd.py  diff.py  doctor.py  export_cmd.py  export_vault.py  find.py  graph.py  history.py  ingest.py  init.py  legacy.py  lint.py  query.py  review.py  search.py  sources.py  status.py  tui.py  update.py
src/engine/: __init__.py  command_registry.py  tool_registry.py
src/graphwiki_kb/: __init__.py  cli.py
src/models/: __init__.py  command_models.py  provider_models.py  source_models.py  wiki_models.py
src/observability/: langsmith_provider.py
src/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  langchain_provider.py  openai_provider.py  structured.py
src/schemas/: __init__.py  claims.py  review.py  runs.py
src/services/: __init__.py  citation_cleanup.py  compile_service.py  concept_service.py  config_service.py  container.py  diff_service.py  doctor_service.py  export_service.py  file_lock.py  graph_ask_controller_service.py  graphrag_command_service.py  graphrag_defaults.py  graphrag_find_service.py  graphrag_input_sync_service.py  graphrag_query_service.py  graphrag_status_service.py  graphrag_sync_service.py  graphrag_wiki_export_service.py  graphrag_workspace_service.py  ingest_service.py  lint_service.py  manifest_service.py  markdown_document.py  model_registry_service.py  normalization_service.py  project_service.py  query_router_service.py  query_service.py  review_service.py  search_service.py  status_service.py  stopwords.py  tui_service.py  update_service.py
src/storage/: __init__.py  compile_run_store.py  run_store.py  search_index_store.py
src/workflows/: __init__.py  query_graph.py  review_graph.py
tests/: conftest.py  test_backend_evaluation.py  test_cli.py  test_compile_and_lint.py  test_compile_run_store.py  test_concept_service.py  test_ecosystem_phase0.py  test_ecosystem_phase1.py  test_ecosystem_phase2.py  test_ecosystem_phase3.py  test_edge_case_coverage.py  test_evaluate_backends_script.py  test_evaluation_scripts.py  test_file_lock.py  test_golden_markdown.py  test_graph_ask_controller_service.py  test_graph_command.py  test_graphrag_artifact_retriever.py  test_graphrag_command_service.py  test_graphrag_find_service.py  test_graphrag_input_sync_service.py  test_graphrag_integration.py  test_graphrag_query_service.py  test_graphrag_status_service.py  test_graphrag_sync_service.py  test_graphrag_wiki_export_service.py  test_graphrag_workspace_service.py  test_light_chunker.py  test_light_deduper.py  test_light_extractor_parse.py  test_light_keywords.py  test_light_models.py  test_light_vector_store.py  test_lightrag_answer.py  test_lightrag_build.py  test_lightrag_cli.py  test_lightrag_config.py  test_lightrag_coverage.py  test_lightrag_embeddings.py  test_lightrag_eval.py  (+51 more)
tests/agents/: __init__.py  conftest.py  test_agent_command.py  (+20 more)
(+160 files in other folders)
