[tool.poetry]
name = "capstone-kb"
version = "0.1.0"
description = "CLI-first knowledge-base prototype for the CSC 675 capstone"
authors = ["Esteban Montelongo"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
click = "^8.1.7"
PyYAML = ">=6.0.1,<7.0"
markitdown = "^0.1.5"
docling = "^2.86.0"
openai = "^2.31.0"
anthropic = "^0.95.0"
google-genai = "^1.73.1"
rich = "^15.0.0"
tenacity = "^9.1.4"
mistralai = "^2.4.1"
pdfkit = "^1.0.0"
markdown-it-py = "^3.0"
nltk = "^3.9"
rapidfuzz = "^3.9"
python-frontmatter = "^1.1"
pydantic = "^2.13"
python-slugify = "^8.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4,<8.0"
pytest-cov = ">=4.1,<5.0"
black = ">=22.12,<23.0"

[tool.poetry.scripts]
kb = "src.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-report=xml --cov-fail-under=97"

[tool.black]
line-length = 88
target-version = ["py311"]
include = "\\.pyi?$"

[tool.coverage.report]
exclude_lines = [
	"pragma: no cover",
]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
