[tool.poetry]
name = "graphwiki-kb"
version = "0.1.0"
description = "CLI-first knowledge-base prototype for the CSC 675 capstone"
authors = ["Esteban Montelongo"]
packages = [{ include = "graphwiki_kb", from = "src" }]
include = [
	{ path = "graph/graphrag/prompts/*.txt", format = ["sdist", "wheel"] },
	{ path = "src/graphwiki_kb/data/*.txt", format = ["sdist", "wheel"] },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
click = "^8.1.7"
PyYAML = ">=6.0.1,<7.0"
markitdown = "^0.1.5"
docling = "^2.86.0"
openai = "^2.31.0"
anthropic = "^0.95.0"
google-genai = "^1.73.1"
rich = "^15.0.0"
tenacity = "^9.1.4"
mistralai = ">=2.4.1,<3,!=2.4.6"
pdfkit = "^1.0.0"
markdown-it-py = "^3.0"
nltk = "^3.9"
rapidfuzz = "^3.9"
python-frontmatter = "^1.1"
pydantic = "^2.13"
python-slugify = "^8.0"
graphrag = ">=3.0.9,<3.1"
xhtml2pdf = "^0.2.17"
pyarrow = ">=16,<23"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4,<8.0"
pytest-cov = ">=4.1,<5.0"
black = ">=24.10,<26.0"
ruff = ">=0.14,<1.0"
mypy = ">=1.19,<2.0"
pre-commit = ">=4.0,<5.0"

[tool.poetry.scripts]
kb = "graphwiki_kb.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=graphwiki_kb --cov-report=term-missing --cov-report=xml --cov-fail-under=95"
markers = [
	"graphrag_integration: opt-in GraphRAG provider-backed integration smoke tests",
]

[tool.black]
line-length = 88
target-version = ["py311", "py312", "py313"]
include = "\\.pyi?$"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
follow_imports = "skip"
disable_error_code = ["import-untyped"]
warn_unused_ignores = true
show_error_codes = true

[tool.coverage.report]
exclude_lines = [
	"pragma: no cover",
]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
